# ruznama

./: .env  .gitignore  2.json  README.md  asset-manifest.json  bot.py  index copy.html  index.html  index.js  main.py  manifest.json  mounth.html  mytext.json  package-lock.json  package.json  page1.html  page2.html  pages.html  pyproject.toml  quotes.json  script.js  styles.css  vercel.json  year.html
api/: bot.js  index.js  locations.js  quote.js  times-today.js  utils.js  webhook.js
api/times/: [id].js
css/: styles.css
css-js/: css.js  footer.css  header.css  list-sitys.css  list-year.css  main.css  prayer-times-day.css  start-end-prayer.css  table-prayer.css
db/: cities-areas.json
db/cities-areas/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  41.json  42.json  43.json  44.json  45.json  46.json  5.json  (+4 more)
static/js/: 453.59583f69.chunk.js  453.59583f69.chunk.js.map  453.7240d997.chunk.js  453.7240d997.chunk.js.map  main.095cf694.js  main.095cf694.js.map  main.90cc5a31.js  main.90cc5a31.js.map
webapp/: index.html  script.js  style.css
